--- a/procfile
+++ b/procfile
@@ -1,1 +1,8 @@
 web: uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
+services:
+  - type: web
+    name: ApiIADemo
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    pythonVersion: 3.7
